# asciiTeX

./: .clang-format  .editorconfig  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  EXAMPLES  Makefile.am  Makefile.in  NEWS  README  README.md  asciiTeX.sublime-project  configure  configure.ac
.github/workflows/: cmake.yml  codeql-analysis.yml  release.yml
examples/: eq1.txt  eq10.txt  eq11.txt  eq12.txt  eq13.tex  eq13.txt  eq14.tex  eq14.txt  eq15.tex  eq15.txt  eq16.txt  eq17.tex  eq17.txt  eq2.txt  eq3.txt  eq4.txt  eq5.txt  eq6.txt  eq7.txt  eq8.txt  eq9.tex  eq9.txt
man/: asciiTeX.1  asciiTeX_gui.1
resources/: README  XML_to_header.sh  gui.glade  gui.xml
src/: Makefile.am  Makefile.in  array.c  array.h  asciiTeX.c  asciiTeX.h  asciiTeX_struct.h  asciitexgui.rc  binom.c  binom.h  brace.c  brace.h  config.h  config.h.in  dim.c  dim.h  draw.c  draw.h  frac.c  frac.h  gui.c  gui.h  gui_ico.h  limit.c  limit.h  main.c  manual.h  ouline.c  ouline.h  parsedef.h  sqrt.c  sqrt.h  sscript.c  sscript.h  symbols.c  symbols.h  text.c  text.h  utils.c  utils.h
